(be)deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-foodapp-deploymentbe
  labels:
    app: eks-foodapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-foodapp
  template:
    metadata:
      labels:
        app: eks-foodapp
    spec:
      containers:
      - name: eks-foodapp
        image: 452444392358.dkr.ecr.us-east-1.amazonaws.com/eksfoodappimagebe:latestbe
        imagePullPolicy: Always
        ports:
        - containerPort: 8095
