(be)Service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-foodapp-servicebe
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - port: 8095
      targetPort: 8095
      protocol: TCP
  type: LoadBalancer
  selector:
    app: eks-foodapp
