(be)IngressService.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-foodapp-ingress-servicebe
  labels:
    app: eks-foodapp
  annotations:
    # Ingress Core Settings  
    kubernetes.io/ingress.class: "nlb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":8095}]'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-foodapp-servicebe
                port:
                  number: 8095
